--- a/dev/src/components/Menu/Menu.css
+++ b/dev/src/components/Menu/Menu.css
@@ -1,5 +1,24 @@
 body {
     background-color: #282c34;
+    /* background: url('https://upload.wikimedia.org/wikipedia/commons/5/53/Upplands_nation1.jpg') no-repeat center fixed;
+    background-size: cover; */
     margin:0;
     padding:0;
   }
+  
+  .bg-image {
+    /* The image used */
+    /* background: url('https://upload.wikimedia.org/wikipedia/commons/5/53/Upplands_nation1.jpg') fixed; */
+
+    /* Add the blur effect */
+    /* filter: blur(8px); */
+    
+    /* Full height */
+    height: 100%; 
+    
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
