--- a/dev/src/components/Menu/Menu.css
+++ b/dev/src/components/Menu/Menu.css
@@ -6,7 +6,7 @@ body {
     padding:0;
     font-family: Roboto;
   }
-h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p {
   margin-top: 3px; 
   margin-bottom: 3px;
 }
