--- a/dev/src/components/Menu/Menu.css
+++ b/dev/src/components/Menu/Menu.css
@@ -10,6 +10,10 @@ h1, h2, h3, h4, h5, h6, p {
   margin-top: 3px; 
   margin-bottom: 3px;
 }
+html
+{
+  height: 100%;
+}
   
   .bg-image {
     /* The image used */
